# CS-E4770

./: README.md
project1/: README.md
project1/benchmark/: main_page.js  random.js  redirect.js  submit.js
project1/deno_oak/: Dockerfile  app.js  consts.js  controller.js  database.env  db.js  docker-compose.yml  run.sh  utils.js
project1/go_gin/: Dockerfile  Makefile  cfg.json  docker-compose.yml  go.mod  go.sum  main.go
project1/node_express/: .env  Dockerfile  app.js  controller.js  db.js  docker-compose.yml  package-lock.json  package.json  utils.js
project1/rust_rocket/: Cargo.toml  Dockerfile  docker-compose.yml
project1/rust_rocket/sql/: create_table.sql
project1/rust_rocket/src/: main.rs
project1/rust_rocket_orm/: .env  Cargo.toml  README.md  docker-compose.yml
project1/rust_rocket_orm/migrations/2023-03-26-150935_short_url_map/: down.sql  up.sql
project1/rust_rocket_orm/src/: lib.rs  models.rs  schema.rs
project1/shorten_url_frontend/: package.json
project2/: README.md  docker-compose.yml  nginx.conf  project.env
project2/api/: Dockerfile  app.js  cfg.json  db.js  deps.js
project2/grader/: consumer.js  db.js  deps.js  grade.js  publish_test.js
project2/tests/: benchmark_grade.js  benchmark_main.js
project2/ui/: app.js
project3/: README.md  REPORT.md  docker-compose.yml  nginx.conf  project.env
project3/api/: Dockerfile  app.js  db.js  deps.js
project3/consumer/: Dockerfile  cfg.json  consumer.js  deps.js
project3/kubernetes/: api-service.yaml  api.yaml  build_images.sh  clean.sh  consumer-service.yaml  consumer.yaml  database-config.yaml  database-migration-job.yaml  nginx-ingress.yaml  rabbitmq-config.yaml  start.sh  ui-service.yaml  ui.yaml
project3/ui/: app.js  (+2 more)
(+30 files in other folders)
